[package]
name = "bevy-boids"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy = { version = "0.16.0", features = [ "dynamic_linking" ] }
bevy-inspector-egui = "0.31.0"
bevy_rand = { version = "0.11.0", features = ["wyrand"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
